--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,76 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="container-fluid">
+  <div class="row offset-1 mt-3">
+    <h2>新規会員登録</h2>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "public/shared/error_messages", resource: resource %>
+  
+    <div class="field row offset-3 mt-3">
+      <div class="col-3">
+        <%= f.label :"名前" %>
+      </div>
+      <div class="col-3">
+        <%= f.text_field :name, autofocus: true, autocomplete: "name",placeholder:"name" %>
+      </div>
+    </div>
+  
+    <div class="field row offset-3 mt-3">
+      <div class="col-3">
+        <%= f.label :"アカウントID" %>
+      </div>
+      <div class="col-3">
+        <%= f.text_field :account, autofocus: true, autocomplete: "account",placeholder:"＠○○○○" %>
+      </div>
+    </div>
+
+    <div class="field row offset-3 mt-3">
+      <div class="col-3">
+        <%= f.label :"メールアドレス" %>
+      </div>
+      <div class="col-3">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email",placeholder:"◯◯◯＠gmail.com" %>
+      </div>
+    </div>
+  
+    <div class="field row offset-3 mt-3">
+      <div class="col-3">
+        <%= f.label :"電話番号" %>
+      </div>
+      <div class="col-3">
+        <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number",placeholder:"00000000000" %>
+      </div>
+    </div>
+
+    <div class="field row offset-3 mt-3">
+      <div class="col-3">
+        <%= f.label :パスワード %>
+        <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %>文字以上)</em>
+        <% end %>
+      </div>
+      <div class="col-3">
+        <%= f.password_field :password, autocomplete: "new-password" %>
+      </div>
+    </div>
+
+    <div class="field row offset-3 mt-3">
+      <div class="col-3">
+        <%= f.label :パスワード（確認用） %>
+      </div>
+      <div class="col-3">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      </div>
+    </div>
+
+    <div class="actions text-center pt-5">
+      <%= f.submit "新規登録", class: "btn btn-primary", style:"width:200px;" %>
+    </div>
+  <% end %>
+
+  <div class="offset-1 mt-4">
+    <%= link_to "アカウントをお持ちですか？",user_session_path %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+</div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "public/shared/links" %>
