--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Public::Users#show</h1>
-<p>Find me in app/views/public/users/show.html.erb</p>
+<% if current_user.id? %>
+<div class="container-fluid">
+  <div class="row offset-1 py-3">
+    <h2></h2>
+  </div>
