--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,13 +37,13 @@
               <%= link_to 'ユーザー検索', searches_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
-              <%= link_to '会員一覧', admin_users_path, class: 'nav-link text-dark' %>
+              <%= link_to '会員一覧', admin_top_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
               <%= link_to '投稿一覧', admin_postes_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
-              <%= link_to "ログアウト", admin_destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %>
+              <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' %>
             </li>
             <% else %>
             <li class="nav-item">
