--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -40,7 +40,7 @@
   </div>
   
   <div class="actions text-center pt-5">
-    <%= f.submit '新規投稿', class: "btn btn-success", style:"width:200px;" %>
+    <%= f.submit '変更内容を保存', class: "btn btn-success", style:"width:300px;" %>
   </div>
 <% end %>
 </div>
