--- a/app/views/public/users/confirm.html.erb
+++ b/app/views/public/users/confirm.html.erb
@@ -1,2 +1,8 @@
-<h1>Public::Users#confirm</h1>
-<p>Find me in app/views/public/users/confirm.html.erb</p>
+<div class="container-fluid d-flex align-items-center" style="height: 600px;">
+  <div class="row text-center mx-auto d-flex flex-column">
+    <p class="font-weight-bold mb-5">本当に退会しますか？</p>
+    <p>退会すると、会員登録情報や<br>これまでの投稿履歴が閲覧できなきなります。<br>退会する場合は、「退会する」をクリックしてください。</p>
+    <%= link_to "退会しない", user_path(current_user) %>
+    <%= link_to "退会", withdraw_user_path, method: :patch , data: { confirm: "本当に退会しますか？" } %>
+  </div>
+</div>
