--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,6 +1,6 @@
-<% if current_user.id? %>
+<% if @user.id == current_user.id %>
   <% if @user.image.attached? %>
-    <%= image_tag current_user.image %>
+    <%= image_tag @user.image %>
   <% else %>
     <i class='fa-regular fa-user'></i>
   <% end %></br>
@@ -8,8 +8,18 @@
   <%= @user.name %></br>
   <%= @user.height %>cm</br>
   <%= @user.introduction %></br>
-  <%= link_to 'プロフィール編集', edit_user_path %></br>
-  <%= link_to 'いいね一覧', favorites_user_path(@user) %></br>
+  <%= link_to "フォロー数:#{@user.followings.count}", user_followings_path(@user.id) %>
+  <%= link_to "フォロワー数:#{@user.followers.count}",user_followers_path(@user.id) %></br>
+  <% if @user.id == current_user.id %>
+    <%= link_to 'プロフィール編集', edit_user_path %></br>
+    <%= link_to 'いいね一覧', favorites_user_path(@user) %></br>
+  <% else %>
+    <% if current_user.following?(@user) %>
+      <%= link_to "フォロー外す", user_relationships_path(@user.id), method: :delete %>
+    <% else %>
+      <%= link_to "フォローする", user_relationships_path(@user.id), method: :post %>
+    <% end %>
+  <% end %>
   <a href='/posts/new'>
     <i class="fa-solid fa-plus"></i>
   </a></br>
@@ -23,11 +33,11 @@
   <% else %>
     "<i class='fa-regular fa-user'></i>".html_safe
   <% end %></br>
-  <%= @user.account(@user.id) %></br>
-  <%= @user.name(@user.id) %></br>
-  <%= @user.height(@user.id) %>cm</br>
-  <%= @user.introduction(@user.id) %></br>
-  <%= @post.each do |post| %>
+  <%= @user.account %></br>
+  <%= @user.name %></br>
+  <%= @user.height %>cm</br>
+  <%= @user.introduction %></br>
+  <%= @posts.each do |post| %>
     <%= link_to (image_tag post.image,size: "100×100"), post_path(post.id) %></br>
     <%= image_tag post.user.get_profile_image(100,100) %>
     <%= post.title %>
