--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,2 +1,33 @@
-<h1>Admin::Homes#top</h1>
-<p>Find me in app/views/admin/homes/top.html.erb</p>
+<div class="container-fluid">
+  <div class="row offset-1 py-3">
+    <h2>会員一覧</h2>
+  </div>
+  
+  <table class="table">
+    <thead>
+      <tr>
+        <th>ユーザーID</th>
+        <th>アカウントID</th>
+        <th>メールアドレス</th>
+        
+        <th>ステータス</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @users.each do |user| %>
+      <tr>
+        <td><%= user.id %></td>
+        <td><%= link_to "#{user.account}", admin_user_path(user.id) %></td>
+        <td><%= user.email %></td>
+        <td>
+          <% if user.is_active? %>
+            有効
+          <% else %>
+            退会
+          <% end %>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
