--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,2 +1,37 @@
-<h1>Admin::Posts#show</h1>
-<p>Find me in app/views/admin/posts/show.html.erb</p>
+<div class="container-fluid">
+  <div class="row offset-1 py-3">
+    <h2>投稿詳細</h2>
+  </div>
+  <% if @post.user.image.attached? %>
+    <%= image_tag @post.user.image %>
+  <% else %>
+    <i class='fa-regular fa-user'></i>
+  <% end %>
+  <%= @post.user.account %>
+  <%= link_to '編集', edit_admin_post_path %>/<%= link_to '削除', admin_post_path(@post), method: :delete, "deta-confirm" => "本当に削除しますか？" %></br>
+  <%= image_tag @post.image %></br>
+  <%= @post.sex %>
+  <%= @post.title %></br>
+  <%= @post.introduction %>
+  
+<div>
+  <p>コメント件数：<%= @post.comments.count %></p>
+  <% @post.comments.each do |comment| %>
+    <% if comment.user.image.attached? %>
+      <%= image_tag cumment.user.image %>
+    <% else %>
+      <i class='fa-regular fa-user'></i>
+    <% end %>
+    <%= comment.user.name %>
+    <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
+    <% if comment.user == current_user %>
+      <%= link_to "削除", post_comment_path(comment.post, comment), method: :delete %></br>
+    <% end %>
+  <% end %>
+</div>
+<div>
+  <%= form_with model: [@post, @comment] do |f| %>
+    <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+    <%= f.submit "送信する" %>
+  <% end %>
+</div>
