--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -9,8 +9,7 @@
   <% end %>
   <%= @post.user.account %>
   <% if @post.user.id == current_user.id %>
-    <%= link_to '編集', edit_post_path %>
-    <%= link_to '削除', post_path(@post), method: :delete, "deta-confirm" => "本当に削除しますか？" %>
+    <%= link_to '編集', edit_post_path %>/<%= link_to '削除', post_path(@post), method: :delete, "deta-confirm" => "本当に削除しますか？" %>
   <% end %></br>
   <%= image_tag @post.image %></br>
   <%= @post.sex %>
