--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,2 +1,19 @@
-<h1>Admin::Posts#index</h1>
-<p>Find me in app/views/admin/posts/index.html.erb</p>
+<div class="row row-cols-4">
+  <% @posts.each do |post| %>
+    <div class="col">
+      <%= link_to (image_tag post.image,size: "100×100"), admin_post_path(post.id) %></br>
+      <%= post.user.account %>
+      <%= post.sex %>
+      <%= post.user.height %>
+      <%= post.title %>
+    </div>
+  <% end %>
+  <div class="search_from">
+    <%= form_with url: admin_search_path, local: true, method: :get do |f| %>
+      <%= f.select :sex, ['man', 'woman', 'unisex'] %>
+      <%= f.submit "絞り込み", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+  
+  <%= paginate @posts %>
+  
