--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,2 +1,26 @@
-<h1>Admin::Users#show</h1>
-<p>Find me in app/views/admin/users/show.html.erb</p>
+<div class="container-fluid">
+  <div class="row offset-1 py-3">
+    <h2><%= @user.account %>さんの詳細ページ</h2>
+  </div>
+  
+  <% if @user.image.attached? %>
+    <%= image_tag @user.image %>
+  <% else %>
+    <i class='fa-regular fa-user'></i>
+  <% end %></br>
+  <%= @user.account %></br>
+  <%= @user.name %>/<%= @user.height %>cm</br>
+  <%= @user.introduction %></br>
+  <%= link_to "フォロー数:#{@user.followings.count}", admin_user_followings_path(@user.id) %>/<%= link_to "フォロワー数:#{@user.followers.count}", admin_user_followers_path(@user.id) %></br>
+  <%= link_to 'プロフィール編集', edit_admin_user_path %>/
+  <% if @user.is_active? %>
+    有効
+  <% else %>
+    退会
+  <% end %>
+  
+  <% @posts.each do |post| %>
+    <%= link_to (image_tag post.image,size: "200×200"), admin_post_path(post.id) %>
+    <%= post.title %>
+  <% end %>
+</div>
