--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
               <%= link_to '会員一覧', admin_top_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
-              <%= link_to '投稿一覧', admin_postes_path, class: 'nav-link text-dark' %>
+              <%= link_to '投稿一覧', admin_posts_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
               <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' %>
@@ -60,14 +60,25 @@
           </div>
         </div>
       </nav>
-      <div class = "search_from">
-        <%= form_with url: search_path, local: true, method: :get do |f| %>
-          <%= f.text_field :word %>
-          <%= f.select :range, options_for_select([[:'User'],['Post']]) %>
-          <%= f.select :serch, options_for_select([[:"完全一致","perfect_match"], ["前方一致","forward_match"], ["後方一致","backward_match"], ["部分一致","partial_match"]]) %>
-          <%= f.submit "検索", class: "btn btn-primary" %>
-        <% end %>
-      </div>
+      <% if admin_signed_in? %>
+        <div class = "search_from">
+          <%= form_with url: admin_search_path, local: true, method: :get do |f| %>
+            <%= f.text_field :word %>
+            <%= f.select :range, options_for_select([[:'User'],['Post']]) %>
+            <%= f.select :serch, options_for_select([[:"完全一致","perfect_match"], ["前方一致","forward_match"], ["後方一致","backward_match"], ["部分一致","partial_match"]]) %>
+            <%= f.submit "検索", class: "btn btn-primary" %>
+          <% end %>
+        </div>
+      <% else user_signed_in? %>
+        <div class = "search_from">
+          <%= form_with url: search_path, local: true, method: :get do |f| %>
+            <%= f.text_field :word %>
+            <%= f.select :range, options_for_select([[:'User'],['Post']]) %>
+            <%= f.select :serch, options_for_select([[:"完全一致","perfect_match"], ["前方一致","forward_match"], ["後方一致","backward_match"], ["部分一致","partial_match"]]) %>
+            <%= f.submit "検索", class: "btn btn-primary" %>
+          <% end %>
+        </div>
+      <% end %>
 
     </header>
     <main class="mb-auto">
