--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row offset-1 py-3">
     <h2>プロフィール編集</h2>
   </div>
-  <%= form_with model: @user do |f| %>
+  <%= form_with model: @user,url:user_path(@user) do |f| %>
     <div class="row offset-3 mt-3">
     <div class="col-3">
       <p>写真を選択</p>
