--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -2,6 +2,14 @@
   <div class="row offset-1 py-3">
     <h2>新規投稿</h2>
   </div>
+  <% if @post.errors.any? %>
+  <%= @post.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @post.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 <%= form_with model: @post,url: posts_path, method: :post do |f| %>
   <div class="row offset-3 mt-3">
     <div class="col-3">
