--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,48 +1,78 @@
-<div class="container-fluid">
+<div class="card-list-container py-5">
   <div class="row offset-1 py-3">
     <h2>投稿詳細</h2>
   </div>
-  <% if @post.user.image.attached? %>
-    <%= image_tag @post.user.image %>
-  <% else %>
-    <i class='fa-regular fa-user'></i>
-  <% end %>
-  <%= @post.user.account %>
-  <% if @post.user.id == current_user.id %>
-    <%= link_to '編集', edit_post_path %>/<%= link_to '削除', post_path(@post), method: :delete, "deta-confirm" => "本当に削除しますか？" %>
-  <% end %></br>
-  <%= image_tag @post.image %></br>
-  <%= @post.sex %>
-  <% if @post.favorited_by?(current_user) %>
-  <p><%= link_to post_favorite_path(@post), method: :delete do %>
-        ♥<%= @post.favorites.count %> いいね
-      <% end %></p>
-  <% else %>
-  <p><%= link_to post_favorite_path(@post), method: :post do %>
-       ♡<%= @post.favorites.count %> いいね
-     <% end %></p>
-  <% end %></br>
-  <%= @post.title %></br>
-  <%= @post.introduction %>
   
-<div>
-  <p>コメント件数：<%= @post.comments.count %></p>
-  <% @post.comments.each do |comment| %>
-    <% if comment.user.image.attached? %>
-      <%= image_tag cumment.user.image %>
-    <% else %>
-      <i class='fa-regular fa-user'></i>
-    <% end %>
-    <%= comment.user.name %>
-    <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
-    <% if comment.user == current_user %>
-      <%= link_to "削除", post_comment_path(comment.post, comment), method: :delete %></br>
-    <% end %>
-  <% end %>
+  <div class="card w-50 mx-auto mt-4 shadow-lg">
+    <div class="d-flex flex-row align-items-center">
+      <% if @post.user.image.attached? %>
+        <%= image_tag @post.user.image, size:"100x100", class: "mt-3 rounded-circle"; %>
+      <% else %>
+        <%= image_tag 'no_image', size: "200x200", class: "mt-3 rounded-circle"; %>
+      <% end %>
+      <%= link_to (@post.user.account), user_path(@post.user), class: "mr-2"; %>   <%= @post.user.height %>cm
+        <div class="offset-5">
+          <% if current_user && @post.user.id == current_user.id %>
+            <%= link_to '編集', edit_post_path,class:"btn btn-info mr-2" %><%= link_to '削除', post_path(@post), method: :delete, "deta-confirm" => "本当に削除しますか？",class:"btn btn-danger" %>
+          <% end %>
+        </div>
+    </div>
+    
+    <div class="card-body">
+      <div class="row d-flex flex-column">
+        <div class="text-center">
+          <%= image_tag(@post.image, size:"400x400") %></br>
+        </div>
+          <h5 class="text-right fw-bold">
+            <%= @post.sex %>
+          </h5>
+          <div class="ml-3">
+            <% if @post.favorited_by?(current_user) %>
+              <p><%= link_to post_favorite_path(@post), method: :delete do %>
+                ♥<%= @post.favorites.count %> いいね
+              <% end %></p>
+            <% else %>
+              <p><%= link_to post_favorite_path(@post), method: :post do %>
+                ♡<%= @post.favorites.count %> いいね
+              <% end %></p>
+            <% end %></br>
+            <p class="card-title">
+              <%= @post.title %></br>
+            </p>
+            <p class="card-text">
+              <%= @post.introduction %>
+            </p>
+            <p>コメント件数：<%= @post.comments.count %></p>
+            <% @post.comments.each do |comment| %>
+            <div class="row">
+              <% if comment.user.image.attached? %>
+                <%= image_tag comment.user.image, size:"100x100", class: "mt-3 rounded-circle"; %>
+              <% else %>
+                <%= image_tag 'no_image', size: "100x100", class: "mt-3 rounded-circle"; %>
+              <% end %>
+              <div class="my-auto">
+              <%= comment.user.name %>
+              <%= comment.created_at.strftime('%Y/%m/%d') %></br>
+              <%= comment.comment %></br>
+              </div>
+              </div>
+            </div>
+              <% if comment.user == current_user %>
+                <%= link_to "削除", post_comment_path(comment.post, comment), method: :delete %>
+              <% end %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-<div>
+
+<div class="text-center">
   <%= form_with model: [@post, @comment] do |f| %>
-    <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+    <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに",style:"width:500px; height:100px;" %>
     <%= f.submit "送信する" %>
   <% end %>
 </div>
+
+
