--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -2,48 +2,51 @@
   <div class="row offset-1 py-3">
     <h2><%= @user.account %>さんの詳細ページ</h2>
   </div>
-<% if @user.id == current_user.id %>
+
+  <div class="row shadow-sm">
+  <div class="mx-auto text-center mb-4">
   <% if @user.image.attached? %>
-    <%= image_tag @user.image %>
-  <% else %>
-    <i class='fa-regular fa-user'></i>
+    <%= image_tag @user.image, size:"200x200", class: "mt-3 rounded-circle"; %>
+  <% else %></br>
+    <%= image_tag 'no_image', size: "200x200", class: "mt-3 rounded-circle"; %>
   <% end %></br>
-  <%= @user.account %></br>
-  <%= @user.name %>/<%= @user.height %>cm</br>
-  <%= @user.introduction %></br>
-  <%= link_to "フォロー数:#{@user.followings.count}", user_followings_path(@user.id) %>/<%= link_to "フォロワー数:#{@user.followers.count}",user_followers_path(@user.id) %></br>
-  <% if @user.id == current_user.id %>
-    <%= link_to 'プロフィール編集', edit_user_path %></br>
-    <%= link_to 'いいね一覧', favorites_user_path(@user) %></br>
-  <% else %>
-    <% if current_user.following?(@user) %>
-      <%= link_to "フォロー外す", user_relationships_path(@user.id), method: :delete %>
-    <% else %>
-      <%= link_to "フォローする", user_relationships_path(@user.id), method: :post %>
-    <% end %>
-  <% end %>
-  <a href='/posts/new'>
-    <i class="fa-solid fa-plus"></i>
-  </a></br>
-  
-  <% @posts.each do |post| %>
-    <%= link_to (image_tag post.image,size: "200×200"), post_path(post.id) %>
-    <%= post.title %>
-  <% end %>
-<% else %>
-  <% if @user.image.attached? %>
-    <%= image_tag @user.image %>
-  <% else %>
-    "<i class='fa-regular fa-user'></i>".html_safe
-  <% end %></br>
-  <%= @user.account %></br>
   <%= @user.name %></br>
-  <%= @user.height %>cm</br>
+  <%= @user.account %> / <%= @user.height %>cm</br>
   <%= @user.introduction %></br>
-  <%= @posts.each do |post| %>
-    <%= link_to (image_tag post.image,size: "100×100"), post_path(post.id) %></br>
-    <%= image_tag post.user.get_profile_image(100,100) %>
-    <%= post.title %>
+  <%= link_to "#{@user.followings.count}フォロー", user_followings_path(@user.id) %> | <%= link_to "#{@user.followers.count}フォロワー",user_followers_path(@user.id) %></br>
+  <% if current_user && @user.id == current_user.id %>
+    <%= link_to 'プロフィール編集', edit_user_path,class:"btn btn-outline-dark mr-2 mt-3" %>
+    <%= link_to 'いいね一覧', favorites_user_path(@user),class:"btn btn-outline-dark mt-3" %></br>
+    <a href='/posts/new'>
+      <i class="fa-regular fa-square-plus mt-3"></i>
+    </a></br>
+  <% else %>
+    <div class="my-4">
+    <% if current_user.following?(@user) %>
+      <%= link_to "フォロー外す", user_relationships_path(@user.id), method: :delete,class:"bbtn btn-primary btn-lg" %>
+    <% else %>
+      <%= link_to "フォローする", user_relationships_path(@user.id), method: :post,class:"bbtn btn-primary btn-lg" %>
+    <% end %>
+    </div>
+  <% end %></br>
+  </div>
+  </div>
+  
+  <div class="d-flex flex-row flex-wrap">
+  <% @posts.each do |post| %>
+    <div class="card shadow-lg" style="width:300px;">
+      <%= link_to(image_tag(post.image, size: "200x200"), post_path(post.id), class: "card-img-top text-center") %></br>
+       <div class="card-body">
+        <div class="row text-center">
+          <div class="col-10">
+            <div class="card-title">
+              <%= post.title %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   <% end %>
-<% end %>
+  </div>
+
 </div>
