--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,19 +1,33 @@
-<div class="row row-cols-4">
-  <% @posts.each do |post| %>
-    <div class="col">
-      <%= link_to (image_tag post.image,size: "100×100"), admin_post_path(post.id) %></br>
-      <%= post.user.account %>
-      <%= post.sex %>
-      <%= post.user.height %>
-      <%= post.title %>
-    </div>
-  <% end %>
-  <div class="search_from">
+<div class="search_from offset-10">
     <%= form_with url: admin_search_path, local: true, method: :get do |f| %>
       <%= f.select :sex, ['man', 'woman', 'unisex'] %>
       <%= f.submit "絞り込み", class: "btn btn-primary" %>
     <% end %>
   </div>
+<div class="card-list-container">
+  <div class="d-flex flex-row flex-wrap text-center">
+    <% @posts.each do |post| %>
+    <div class="card shadow-lg" style="width:300px;">
+      <%= link_to(image_tag(post.image, size: "200x200"), admin_post_path(post.id), class: "card-img-top text-center") %></br>
+      <div class="card-body">
+        <div class="row">
+          <div class="col-10">
+            <div class="card-title">
+              <%= post.user.account %></br>
+              <%= post.sex %>|<%= post.user.height %>cm</br>
+              <%= post.title %></br>
+              <%= link_to "#{post.comments.count} コメント", post_path(post.id), class: "text-dark" %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <% end %>
+ 
   
   <%= paginate @posts %>
+ </div>
+</div>
+  
+  
   
