--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -3,24 +3,41 @@
     <h2><%= @user.account %>さんの詳細ページ</h2>
   </div>
 
-  <% if @user.image.attached? %>
-    <%= image_tag @user.image %>
-  <% else %>
-    <i class='fa-regular fa-user'></i>
-  <% end %></br>
-  <%= @user.account %></br>
-  <%= @user.name %>/<%= @user.height %>cm</br>
-  <%= @user.introduction %></br>
-  <%= link_to "フォロー数:#{@user.followings.count}", admin_user_followings_path(@user.id) %>/<%= link_to "フォロワー数:#{@user.followers.count}", admin_user_followers_path(@user.id) %></br>
-  <%= link_to 'プロフィール編集', edit_admin_user_path %>/
-  <% if @user.is_active? %>
-    有効
-  <% else %>
-    退会
-  <% end %>
+  <div class="row shadow-sm">
+    <div class="mx-auto text-center mb-4">
+      <% if @user.image.attached? %>
+        <%= image_tag @user.image, size:"200x200", class: "mt-3 rounded-circle"; %>
+      <% else %></br>
+        <%= image_tag 'no_image', size: "200x200", class: "mt-3 rounded-circle"; %>
+      <% end %></br>
+      <%= @user.name %></br>
+      <%= @user.account %> / <%= @user.height %>cm</br>
+      <%= @user.introduction %></br>
+      <%= link_to "#{@user.followings.count}フォロー", admin_user_followings_path(@user.id) %> | <%= link_to "#{@user.followers.count}フォロワー",admin_user_followers_path(@user.id) %></br>
+      <%= link_to 'プロフィール編集', edit_admin_user_path,class:"btn btn-outline-dark mr-2 mt-3" %>
+      <div class="mt-3"></div>
+      <% if @user.is_active? %>
+        <h5>Userステータス：有効</h5>
+      <% else %>
+        <h5>Userステータス：退会</h5>
+      <% end %>
+      </div>
+    </div>
   
-  <% @posts.each do |post| %>
-    <%= link_to (image_tag post.image,size: "200×200"), admin_post_path(post.id) %>
-    <%= post.title %>
-  <% end %>
+      <div class="d-flex flex-row flex-wrap">
+        <% @posts.each do |post| %>
+        <div class="card shadow-lg" style="width:300px;">
+          <%= link_to(image_tag(post.image, size: "200x200"), admin_post_path(post.id), class: "card-img-top text-center") %></br>
+          <div class="card-body">
+            <div class="row text-center">
+              <div class="col-10">
+                <div class="card-title">
+                  <%= post.title %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <% end %>
+  </div>
 </div>
