--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,11 @@
     <header class="shadow-sm">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-          <a class="navbar-brand p-3" href='/'>LOGO</a>
+          <% if user_signed_in? %>
+            <a class="navbar-brand p-3" href='/'>LOGO</a>
+          <% elsif admin_signed_in? %>
+            <a class="navbar-brand p-3" , href="<%= admin_posts_path %>" >LOGO</a>
+          <% end %>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
