--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -26,7 +26,7 @@
   
       <div class="d-flex flex-row flex-wrap">
         <% @posts.each do |post| %>
-        <div class="card shadow-lg" style="width:300px;">
+        <div class="card shadow-lg col-3">
           <%= link_to(image_tag(post.image, size: "200x200"), admin_post_path(post.id), class: "card-img-top text-center") %></br>
           <div class="card-body">
             <div class="row text-center">
