--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -10,22 +10,22 @@
       <% else %>
         <%= image_tag 'no_image', size: "200x200", class: "mt-3 rounded-circle"; %>
       <% end %>
-      <%= link_to (@post.user.account), user_path(@post.user), class: "mr-2"; %>   <%= @post.user.height %>cm
-        <div class="offset-5">
-          <% if current_user && @post.user.id == current_user.id %>
-            <%= link_to '編集', edit_post_path,class:"btn btn-info mr-2" %><%= link_to '削除', post_path(@post), method: :delete, "deta-confirm" => "本当に削除しますか？",class:"btn btn-danger" %>
-          <% end %>
-        </div>
+      <div class="d-flex-colmn">
+        <%= link_to (@post.user.account), user_path(@post.user), class: "mr-2"; %>
+        <%= @post.user.height %>cm / <%= @post.sex %>
+      </div>
+      <div class="offset-5">
+        <% if current_user && @post.user.id == current_user.id %>
+          <%= link_to '編集', edit_post_path,class:"btn btn-info mr-2" %><%= link_to '削除', post_path(@post), method: :delete, "deta-confirm" => "本当に削除しますか？",class:"btn btn-danger" %>
+        <% end %>
+      </div>
     </div>
     
     <div class="card-body">
       <div class="row d-flex flex-column">
         <div class="text-center">
-          <%= image_tag(@post.image, size:"400x400") %></br>
+          <%= image_tag(@post.image, size:"700x500") %></br>
         </div>
-          <h5 class="text-right fw-bold">
-            <%= @post.sex %>
-          </h5>
           <div class="ml-3">
             <% if @post.favorited_by?(current_user) %>
               <p><%= link_to post_favorite_path(@post), method: :delete do %>
@@ -37,26 +37,25 @@
               <% end %></p>
             <% end %></br>
             <p class="card-title">
-              <%= @post.title %></br>
+              タイトル：<%= @post.title %></br>
             </p>
             <p class="card-text">
-              <%= @post.introduction %>
+              説明：<%= @post.introduction %>
             </p>
-            <p>コメント件数：<%= @post.comments.count %></p>
+            <p>コメント<%= @post.comments.count %>件</p>
             <% @post.comments.each do |comment| %>
-            <div class="row">
-              <% if comment.user.image.attached? %>
-                <%= image_tag comment.user.image, size:"100x100", class: "mt-3 rounded-circle"; %>
-              <% else %>
-                <%= image_tag 'no_image', size: "100x100", class: "mt-3 rounded-circle"; %>
-              <% end %>
-              <div class="my-auto">
-              <%= comment.user.name %>
-              <%= comment.created_at.strftime('%Y/%m/%d') %></br>
-              <%= comment.comment %></br>
+              <div class="row">
+                <% if comment.user.image.attached? %>
+                  <%= image_tag comment.user.image, size:"100x100", class: "mt-3 rounded-circle"; %>
+                <% else %>
+                  <%= image_tag 'no_image', size: "100x100", class: "mt-3 rounded-circle"; %>
+                <% end %>
+                <div class="my-auto">
+                  <%= comment.user.name %>
+                  <%= comment.created_at.strftime('%Y/%m/%d') %></br>
+                  <%= comment.comment %></br>
+                </div>
               </div>
-              </div>
-            </div>
               <% if comment.user == current_user %>
                 <%= link_to "削除", post_comment_path(comment.post, comment), method: :delete %>
               <% end %>
