--- a/app/views/public/relationships/followings.html.erb
+++ b/app/views/public/relationships/followings.html.erb
@@ -3,9 +3,9 @@
     <h2>フォロー 一覧</h2>
   </div>
   
-  <table class="table table-hover table-inverse">
-    <tbody>
-      <% if @users.exists? %>
+  <% if @users.exists? %>
+    <table class="table table-hover table-inverse">
+      <tbody>
         <% @users.each do |user| %>
           <tr>
             <td>
@@ -19,12 +19,14 @@
                   <%= link_to user.account,user_path(user.id) %></br>
                   <%= user.name %>
                 </div>
-        <% end %>
-      <% else %>
-        <p>ユーザーはいません</p>
-      <% end %>
               </div>
             </td>
           </tr>
-    </tbody>
+        <% end %>
+      </tbody>
+    </table>
+  <% else %>
+    <h4>ユーザーはいません</h4>
+  <% end %>
+  
 </div>
