--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -20,9 +20,9 @@
     <a href='/posts/new'>
       <i class="fa-regular fa-square-plus mt-3"></i>
     </a></br>
-  <% else %>
+  <% elsif current_user %>
     <div class="my-4">
-    <% if current_user.following?(@user) %>
+    <% if @user.following?(current_user) %>
       <%= link_to "フォロー外す", user_relationships_path(@user.id), method: :delete,class:"bbtn btn-primary btn-lg" %>
     <% else %>
       <%= link_to "フォローする", user_relationships_path(@user.id), method: :post,class:"bbtn btn-primary btn-lg" %>
@@ -34,7 +34,7 @@
   
   <div class="d-flex flex-row flex-wrap">
   <% @posts.each do |post| %>
-    <div class="card shadow-lg" style="width:300px;">
+    <div class="card shadow-lg col-3">
       <%= link_to(image_tag(post.image, size: "200x200"), post_path(post.id), class: "card-img-top text-center") %></br>
        <div class="card-body">
         <div class="row text-center">
