--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -10,10 +10,13 @@
       <% else %>
         <%= image_tag 'no_image', size: "200x200", class: "mt-3 rounded-circle"; %>
       <% end %>
-      <%= link_to (@post.user.account), admin_user_path(@post.user), class: "mr-2"; %>   <%= @post.user.height %>cm
-        <div class="offset-5">
-          <%= link_to '編集', edit_admin_post_path,class:"btn btn-info mr-2" %><%= link_to '削除', admin_post_path(@post), method: :delete, "deta-confirm" => "本当に削除しますか？",class:"btn btn-danger" %>
-        </div>
+      <div class="d-flex-colmn">
+        <%= link_to (@post.user.account), admin_user_path(@post.user), class: "mr-2"; %>
+        <%= @post.user.height %>cm / <%= @post.sex %>
+      </div>
+      <div class="offset-5">
+        <%= link_to '編集',edit_admin_post_path,class:"btn btn-info mr-2" %><%= link_to '削除', admin_post_path(@post), method: :delete, "deta-confirm" => "本当に削除しますか？",class:"btn btn-danger" %>
+      </div>
     </div>
  
     <div class="card-body">
@@ -21,17 +24,14 @@
         <div class="text-center">
           <%= image_tag(@post.image, size:"400x400") %></br>
         </div>
-          <h5 class="text-right fw-bold">
-            <%= @post.sex %>
-          </h5>
           <div class="ml-3">
             <p class="card-title">
-              <%= @post.title %></br>
+              タイトル：<%= @post.title %></br>
             </p>
             <p class="card-text">
-              <%= @post.introduction %>
+              説明：<%= @post.introduction %>
             </p>
-            <p>コメント件数：<%= @post.comments.count %></p>
+            <p>コメント<%= @post.comments.count %></p>
             <% @post.comments.each do |comment| %>
             <div class="row">
               <% if comment.user.image.attached? %>
