--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -32,7 +32,19 @@
             <div class="row text-center">
               <div class="col-10">
                 <div class="card-title">
-                  <%= post.title %>
+                  <% if post.favorited_by?(current_user) %>
+                    <p><%= link_to post_favorite_path(post), method: :delete do %>
+                       ♥<%= post.favorites.count %> いいね
+                       <% end %></p>
+                  <% else %>
+                    <p><%= link_to post_favorite_path(post), method: :post do %>
+                       ♡<%= post.favorites.count %> いいね
+                       <% end %></p>
+                  <% end %></br>
+                  <%= post.user.account %></br>
+                  <%= post.sex %> | <%= post.user.height %>cm</br>
+                  <%= post.title %></br>
+                  <%= link_to "#{post.comments.count} コメント", admin_post_path(post.id), class: "text-dark" %>
                 </div>
               </div>
             </div>
