--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,62 +27,73 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
-            <li class="nav-item mr-3">
-              <%= link_to 'ユーザー検索', search_path, class: 'nav-link btn btn-info text-white' %>
-            </li>
-            <li class="nav-item mr-3">
-              <%= link_to 'マイページ', user_path(current_user.id), class: 'nav-link btn btn-info text-white' %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link btn btn-danger text-white' %>
-            </li>
+              <li class="nav-item mr-5">
+                <%= link_to search_path do %>
+                  <h3 class="text-center text-dark"><i class="fa-solid fa-magnifying-glass"></i></h3>
+                  <h6 class="text-center text-dark">search</h6>
+                <% end %>
+              </li>
+              <li class="nav-item mr-5">
+                <%= link_to user_path(current_user.id) do %>
+                  <h3 class="text-center text-dark"><i class="fa-solid fa-user"></i></h3>
+                  <h6 class="text-center text-dark">my page</h6>
+                <% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to destroy_user_session_path, method: :delete do %>
+                  <h3 class="text-center text-dark"><i class="fa-solid fa-right-from-bracket"></i></h3>
+                  <h6 class="text-center text-dark">log out</h6>
+                <% end %>
             <% elsif admin_signed_in? %>
-            <li class="nav-item mr-3">
-              <%= link_to 'ユーザー検索', search_path, class: 'nav-link btn btn-info text-white' %>
-            </li>
-            <li class="nav-item mr-3">
-              <%= link_to '会員一覧', admin_top_path, class: 'nav-link btn btn-info text-white' %>
-            </li>
-            <li class="nav-item mr-3">
-              <%= link_to '投稿一覧', admin_posts_path, class: 'nav-link btn btn-info text-white' %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link btn btn-danger text-white' %>
-            </li>
+              <li class="nav-item mr-5">
+                <%= link_to search_path do %>
+                  <h3 class="text-center text-dark"><i class="fa-solid fa-magnifying-glass"></i></h3>
+                  <h6 class="text-center text-dark">search</h6>
+                <% end %>
+              </li>
+              <li class="nav-item mr-5">
+                <%= link_to admin_top_path do %>
+                    <h3 class="text-center text-dark"><i class="fa-solid fa-users"></i></h3>
+                    <h6 class="text-center text-dark">users</h6>
+                <% end %>
+              </li>
+              <li class="nav-item mr-5">
+                <%= link_to admin_posts_path do %>
+                    <h3 class="text-center text-dark"><i class="fa-regular fa-paste"></i></h3>
+                    <h6 class="text-center text-dark">posts</h6>
+                <% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to destroy_user_session_path, method: :delete do %>
+                  <h3 class="text-center text-dark"><i class="fa-solid fa-right-from-bracket"></i></h3>
+                  <h6 class="text-center text-dark">log out</h6>
+                <% end %>
+              </li>
             <% else %>
-            <li class="nav-item mr-3">
-              <%= link_to 'ユーザー検索', search_path, class: 'nav-link btn btn-info text-white' %>
-            </li>
-            <li class="nav-item mr-3">
-              <%= link_to "新規登録", new_user_registration_path, class: 'nav-link btn btn-secondary text-white' %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "ログイン", new_user_session_path, class: 'nav-link btn btn-primary text-white' %>
-            </li>
+              <li class="nav-item mr-5">
+                <%= link_to search_path do %>
+                  <h3 class="text-center text-dark"><i class="fa-solid fa-magnifying-glass"></i></h3>
+                  <h6 class="text-center text-dark">search</h6>
+                <% end %>
+              </li>
+              <li class="nav-item mr-5">
+                <%= link_to new_user_registration_path do %>
+                  <h3 class="text-center text-dark"><i class="fa-solid fa-right-to-bracket"></i></h3>
+                  <h6 class="text-center text-dark">sign up</h6>
+                <% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to new_user_session_path do %>
+                  <h3 class="text-center text-dark"><i class="fa-solid fa-lock-open"></i></h3>
+                  <h6 class="text-center text-dark">sign in</h6>
+                <% end %>
+              </li>
             <% end %>
             </ul>
           </div>
         </div>
       </nav>
-      <% if admin_signed_in? %>
-        <div class = "search_from">
-          <%= form_with url: admin_search_path, local: true, method: :get do |f| %>
-            <%= f.text_field :word %>
-            <%= f.select :range, options_for_select([[:'User'],['Post']]) %>
-            <%= f.select :search, options_for_select([[:"完全一致","perfect_match"], ["前方一致","forward_match"], ["後方一致","backward_match"], ["部分一致","partial_match"]]) %>
-            <%= f.submit "検索", class: "btn btn-primary" %>
-          <% end %>
-        </div>
-      <% else user_signed_in? %>
-        <div class = "search_from">
-          <%= form_with url: search_path, local: true, method: :get do |f| %>
-            <%= f.text_field :word %>
-            <%= f.select :range, options_for_select([[:'User'],['Post']]) %>
-            <%= f.select :search, options_for_select([[:"完全一致","perfect_match"], ["前方一致","forward_match"], ["後方一致","backward_match"], ["部分一致","partial_match"]]) %>
-            <%= f.submit "検索", class: "btn btn-primary" %>
-          <% end %>
-        </div>
-      <% end %>
+      
 
     </header>
     <main class="mb-auto">
