--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -7,21 +7,30 @@
 <div class="card-list-container">
   <div class="d-flex flex-row flex-wrap text-center">
     <% @posts.each do |post| %>
-    <div class="card shadow-lg col-3">
-      <%= link_to(image_tag(post.image, size: "200x200"), post_path(post.id), class: "card-img-top text-center") %></br>
-      <div class="card-body">
-        <div class="row">
-          <div class="col-10">
-            <div class="card-title">
-              <%= post.user.account %></br>
-              <%= post.sex %> | <%= post.user.height %>cm</br>
-              <%= post.title %></br>
-              <%= link_to "#{post.comments.count} コメント", post_path(post.id), class: "text-dark" %>
+      <div class="card shadow-lg col-3">
+        <%= link_to(image_tag(post.image, size: "200x200"), post_path(post.id), class: "card-img-top text-center") %></br>
+        <div class="card-body">
+          <div class="row">
+            <div class="col-10">
+              <div class="card-title">
+                <% if post.favorited_by?(current_user) %>
+                  <p><%= link_to post_favorite_path(post), method: :delete do %>
+                     ♥<%= post.favorites.count %> いいね
+                     <% end %></p>
+                <% else %>
+                  <p><%= link_to post_favorite_path(post), method: :post do %>
+                     ♡<%= post.favorites.count %> いいね
+                     <% end %></p>
+                <% end %></br>
+                <%= link_to (post.user.account),user_path(post.user) %></br>
+                <%= post.sex %> | <%= post.user.height %>cm</br>
+                <%= post.title %></br>
+                <%= link_to "#{post.comments.count} コメント", post_path(post.id), class: "text-dark" %>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
     <% end %>
  
   
