--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -1,6 +1,24 @@
 <div class="container-fluid">
-  <div class="row offset-1 py-3">
-    <h2>検索結果一覧</h2>
+  <div class="text-center my-3">
+    <% if admin_signed_in? %>
+      <div class = "search_from">
+        <%= form_with url: admin_search_path, local: true, method: :get do |f| %>
+          <%= f.text_field :word %>
+          <%= f.select :range, options_for_select([[:'User'],['Post']]) %>
+          <%= f.select :search, options_for_select([[:"完全一致","perfect_match"], ["前方一致","forward_match"], ["後方一致","backward_match"], ["部分一致","partial_match"]]) %>
+          <%= f.submit "検索", class: "btn btn-primary" %>
+        <% end %>
+      </div>
+    <% else user_signed_in? %>
+      <div class = "search_from">
+        <%= form_with url: search_path, local: true, method: :get do |f| %>
+          <%= f.text_field :word %>
+          <%= f.select :range, options_for_select([[:'User'],['Post']]) %>
+          <%= f.select :search, options_for_select([[:"完全一致","perfect_match"], ["前方一致","forward_match"], ["後方一致","backward_match"], ["部分一致","partial_match"]]) %>
+          <%= f.submit "検索", class: "btn btn-primary" %>
+        <% end %>
+      </div>
+    <% end %>
   </div>
   
   <table class="table table-hover table-inverse">
