--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -22,7 +22,7 @@
     </a></br>
   <% elsif current_user %>
     <div class="my-4">
-    <% if @user.following?(current_user) %>
+    <% if current_user.following?(@user) %>
       <%= link_to "フォロー外す", user_relationships_path(@user.id), method: :delete,class:"bbtn btn-primary btn-lg" %>
     <% else %>
       <%= link_to "フォローする", user_relationships_path(@user.id), method: :post,class:"bbtn btn-primary btn-lg" %>
@@ -40,7 +40,19 @@
         <div class="row text-center">
           <div class="col-10">
             <div class="card-title">
-              <%= post.title %>
+              <% if post.favorited_by?(current_user) %>
+                <p><%= link_to post_favorite_path(post), method: :delete do %>
+                   ♥<%= post.favorites.count %> いいね
+                   <% end %></p>
+              <% else %>
+                <p><%= link_to post_favorite_path(post), method: :post do %>
+                   ♡<%= post.favorites.count %> いいね
+                   <% end %></p>
+              <% end %></br>
+              <%= post.user.account %></br>
+              <%= post.sex %> | <%= post.user.height %>cm</br>
+              <%= post.title %></br>
+              <%= link_to "#{post.comments.count} コメント", post_path(post.id), class: "text-dark" %>
             </div>
           </div>
         </div>
